# Szachy

./: CMakeLists.txt  Main.cpp  Readme.md
cmake/: FindSDL2.cmake  FindSDL2_image.cmake
inc/: Bishop.h  Board.h  Game.h  King.h  Knight.h  Pawn.h  Piece.h  Queen.h  Rook.h  SDLHandler.h
src/: Bishop.cpp  Board.cpp  Game.cpp  King.cpp  Knight.cpp  Pawn.cpp  Piece.cpp  Queen.cpp  Rook.cpp  SDLHandler.cpp
